# task-manager-3r1sic

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
docs/api/: README.md  (+7 more)
src/backend/: .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.py
src/backend/common/: __init__.py
src/backend/common/auth/: decorators.py  jwt_utils.py  permissions.py
src/backend/common/config/: __init__.py  base.py  development.py  production.py  testing.py
src/backend/common/database/: __init__.py
src/backend/common/database/mongo/: __init__.py  connection.py  models.py
src/backend/common/database/redis/: connection.py
src/backend/common/events/: __init__.py  event_bus.py  handlers.py
src/backend/common/exceptions/: __init__.py  api_exceptions.py  error_handlers.py
src/backend/common/logging/: __init__.py  logger.py
src/backend/common/middlewares/: cors.py  rate_limiter.py  request_id.py
src/backend/common/schemas/: __init__.py  error.py  pagination.py
src/backend/common/testing/: __init__.py  fixtures.py  mocks.py
src/backend/common/utils/: __init__.py  datetime.py  security.py  validators.py
src/backend/scripts/: create_service.py  run_services.py  seed_data.py  wait-for-it.sh
src/backend/services/analytics/: Dockerfile  __init__.py  app.py  config.py  wsgi.py
src/backend/services/analytics/api/: __init__.py  dashboards.py  metrics.py  reports.py
src/backend/services/analytics/models/: __init__.py  dashboard.py  report.py
src/backend/services/analytics/services/: __init__.py  dashboard_service.py  report_service.py
src/backend/services/analytics/tests/: __init__.py  conftest.py  test_analytics_api.py
src/backend/services/api_gateway/: Dockerfile  __init__.py  app.py  config.py  wsgi.py
src/backend/services/api_gateway/routes/: __init__.py  health.py  proxy.py
src/backend/services/api_gateway/tests/: __init__.py  conftest.py  test_routes.py
src/backend/services/auth/: Dockerfile  __init__.py  app.py  config.py  wsgi.py
src/backend/services/auth/api/: __init__.py  auth.py  roles.py  users.py
src/backend/services/auth/models/: __init__.py  role.py  user.py
src/backend/services/auth/services/: __init__.py  auth_service.py  role_service.py  user_service.py
src/backend/services/auth/tests/: __init__.py  conftest.py  test_auth_api.py
src/backend/services/file/: Dockerfile  __init__.py  app.py  config.py  wsgi.py
src/backend/services/file/api/: __init__.py  attachments.py  files.py
src/backend/services/file/models/: __init__.py  attachment.py  file.py
src/backend/services/file/services/: __init__.py  file_service.py  scanner_service.py  storage_service.py
src/backend/services/file/tests/: __init__.py  conftest.py  test_file_api.py
src/backend/services/notification/: Dockerfile  __init__.py  app.py  config.py  requirements.txt  wsgi.py
src/backend/services/notification/api/: __init__.py  notifications.py  preferences.py
src/backend/services/project/: Dockerfile  __init__.py  app.py  config.py  requirements.txt
src/backend/services/realtime/: Dockerfile  __init__.py  app.py  config.py  wsgi.py
src/backend/services/task/: Dockerfile  __init__.py  app.py  config.py  requirements.txt  wsgi.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/integration/: __init__.py  test_auth_flow.py  test_project_flow.py  test_task_flow.py
src/backend/tests/performance/: __init__.py  locustfile.py  test_api_performance.py
(+305 files in other folders)
